# vulkenstein

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  build.sh  build_shader.sh  default_stdlib.ll  icd_template.json  ll.cpp  ll_stdlib.cpp  raster.cpp  run_all_tests.py  simplefont.h  spirv_tablegen.py  spirv_to_llvm.cpp  spv_dump.hpp  spv_stdlib.h  stdlib.cpp  stdlibgen.py  test_driver.cpp  test_shader.sh  test_stdlib.cpp  uedit.cpp  utils.hpp  vk.cpp  vk.hpp
spv_stdlib/: spv_stdlib.cpp
tests/: run_all_tests.py  test_driver.cpp  test_padding_0.frag.glsl  test_shader.sh  test_stdlib.cpp
tests/glsl/: test_arith.frag.py  test_arith_1.frag.py  test_padding_0.frag.py  test_padding_1.frag.py  test_sample_0.comp.py  triangle.frag.py  triangle.vert.py  triangle_1.vert.py
tests/hlsl/: branch.comp.py  branch_1.comp.py  image1d_read_write.comp.py
